<resources>
    <string name="app_name">OkeyClick SP</string>
    <string name="signup_title">Service Provider Sign UP</string>
    <string name="apikey">fbb36f24d9b3985aa86fa37fd51c29eb</string>
    <string name="v_code">1.0</string>
    <string name="title_activity_is_online">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification_chennel_id">notify_chennel1</string>
    <string name="action_settings">Settings</string>
    <string name="term_and_condition"><![CDATA[Term & Condition]]></string>
    <string name="google_map_api_key">AIzaSyBMSbObw6L55ReqFc9hPNA9CNRd552HYQ8</string>
    <string name="server_key">AIzaSyCD42eqt4BAMw-9y4sqLF0Ac6xV_ZxzOo4</string>
    <string name="mobile">Mobile</string>
    <string name="term_and_condition_checkbox">I understand and I agree the terms and conditions of service.</string>
    <string name="title_activity_service_history">ServiceHistoryActivity</string>
    <string name="please_choose_services">Please Choose Services</string>
    <string name="all_services">All Services</string>
    <string name="upcomming">Upcomming</string>
    <string name="completed">Completed</string>
    <string name="invit_text_bold">\"When you invite  a friend to book a service through our app. You will recieve 5 \u20ac in wallet.\"</string>
    <string name="invite_text">\"When you invite  a friend to book a service through our app. You will recieve 5 \u20ac in wallet.\"</string>
    <string name="title_activity_upgrade_plan">Upgrade</string>
    <string name="basic_pack">Basic</string>
    <string name="premium">Premium</string>
    <string name="advance">Advance</string>
    <string name="uro">\u20ac</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_book_later">BookLaterActivity</string>
    <string name="title_activity_start_job">StartJobActivity</string>
    <string name="show_date_format">MMM dd, yyyy</string>
    <string name="date_time_format_from_web">yyyy-MM-d H:m:s</string>
    <string name="title_activity_web_inner_view">WebInnerViewActivity</string>
    <string name="term_and_condition_url">http://depextechnologies.org/okey-click/terms-and-conditions.php</string>
    <string name="reviews_txt">Reviews</string>
    <string name="details_txt">Details</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_with">Upload With</string>

</resources>