<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.depex.okeyclick.sp.appscreens.UpgradePlanActivity"
    tools:showIn="@layout/activity_upgrade_plan">

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:id="@+id/premium_pack_tabs"
        app:tabSelectedTextColor="@color/colorPrimaryDark"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabItem
            android:id="@+id/all_services_tab"
            style="@style/AppTheme.TabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_pack" />
        <android.support.design.widget.TabItem
            android:id="@+id/upcomming_tab"
            style="@style/AppTheme.TabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premium" />
        <android.support.design.widget.TabItem
            android:id="@+id/completed_tab"
            style="@style/AppTheme.TabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advance" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/premium_pack_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>
</LinearLayout>