<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.depex.okeyclick.sp.appscreens.ServiceHistoryActivity"
    tools:showIn="@layout/activity_service_history">

    <!-- <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:id="@+id/recycler_service_history"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>

     <FrameLayout
         android:layout_width="247dp"
         android:layout_height="246dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:id="@+id/when_no_service_history"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <ImageView
             android:layout_gravity="center_horizontal|center_vertical"
             android:background="@drawable/puffle_task_icon"
             android:layout_width="150dp"
             android:layout_height="150dp" />
         <TextView
             android:layout_gravity="bottom|center_horizontal"
             android:text="No Service History"
             android:textSize="17dp"
             android:theme="@style/AppTheme.TextViewFont"
             android:textColor="@color/colorPrimaryDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </FrameLayout>
 -->


    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:id="@+id/service_history_tabs"
        app:tabSelectedTextColor="@color/colorPrimaryDark"
        app:tabGravity="center"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabItem
            android:id="@+id/all_services_tab"
            style="@style/AppTheme.TabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_services" />
        <android.support.design.widget.TabItem
            android:id="@+id/upcomming_tab"
            style="@style/AppTheme.TabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcomming" />
        <android.support.design.widget.TabItem
            android:id="@+id/completed_tab"
            style="@style/AppTheme.TabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/service_history_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>
